# PyPlop

./: README.md  plops.py  pyproject.toml  sounds.py
plops/: call-to-attention-0.src  error-buzzer-0.src  goodbye-0.src  jump-scare-0.src  matrix-printer-0.src  snake-hissing.src  success-0.src
